XWIKI-17034: Allow to define different grouping strategy for notifications
  * Provide new unit tests
  * Fix checkstyle